-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.6.0
-
None
Opening the qbs (qmake) project master branch in Qt Creator shows TestApi and TestCmdLineParser, but not TestBlackbox.
Running "Rescan Tests" sometimes makes the blackbox tests show up but only rarely.
For Gerrit Dashboard: QTCREATORBUG-15736 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
149542,3 | CppTools: Avoid inserting invalid entries into cache | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |